@@ -30,13 +30,13 @@ by executing the following commands::
    cvs -z3 -d:pserver:anonymous@boost.cvs.sourceforge.net:/cvsroot/boost checkout boost
    cvs -d:pserver:anonymous@boost.cvs.sourceforge.net:/cvsroot/boost logout
 
-   cvs -d:pserver:anonym...@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent login
-   cvs -z3 -d:pserver:anonym...@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent co -P libtorrent
-   cvs -d:pserver:anonym...@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent logout
+   cvs -d:pserver:anonymous@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent login
+   cvs -z3 -d:pserver:anonymous@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent co -P libtorrent
+   cvs -d:pserver:anonymous@libtorrent.cvs.sourceforge.net:/cvsroot/libtorrent logout
 
-   cvs -d:pserver:anonym...@asio.cvs.sourceforge.net:/cvsroot/asio login
-   cvs -z3 -d:pserver:anonym...@asio.cvs.sourceforge.net:/cvsroot/asio co -P asio
-   cvs -d:pserver:anonym...@asio.cvs.sourceforge.net:/cvsroot/asio login
+   cvs -d:pserver:anonymous@asio.cvs.sourceforge.net:/cvsroot/asio login
+   cvs -z3 -d:pserver:anonymous@asio.cvs.sourceforge.net:/cvsroot/asio co -P asio
+   cvs -d:pserver:anonymous@asio.cvs.sourceforge.net:/cvsroot/asio login
 
 Step 2: Building boost
 ======================
